# GDExtension_Template

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  GDExtension_Template.csproj  GDExtension_Template.sln  LICENSE.md  README.md  SConstruct  main.cpp  project.godot  run.bat  run_editor.sh  run_game.sh
addons/test_module_plugin/: plugin.cfg  test_module_plugin.cs
addons/test_module_plugin/lib/: test_module.gdextension  test_module.windows.template_debug.x86_64.exp  test_module.windows.template_debug.x86_64.lib
addons/test_module_plugin/src/: SConstruct  run_game.sh  test_module.sln
addons/test_module_plugin/src/src/: HelperTestModule.h  MyCustomNode.h
addons/test_module_plugin/test_module_src/: SConstruct  build.sh  main.cpp  run.sh  test_module_src.vcxproj
addons/test_module_plugin/test_module_src/src/: HelperTestModule.h  register_types.cpp  register_types.h  register_types.os
addons/test_module_plugin/test_module_src/x64/Debug/: vc143.idb
content/: icon.svg.import  node_3d.tscn
godot-project/: godot-project.csproj  godot-project.sln  icon.svg.import  project.godot
godot-project/assets/: test_map.tscn
godot-project/content/: icon.svg.import  test_map.tscn
godot-project/src/: my_custom_node.gd
scripts/: test_csharp_script.cs  test_gd_script.gd
src/: HelperTestModule.os  MyCustomNode.hpp  MyCustomNode.os  helper_test_module.hpp  my_custom_node.hpp  register_types.cpp  register_types.hpp
src/test_module/: helper_test_module.hpp  my_custom_node.hpp  register_types.cpp  register_types.hpp
(+1 files in other folders)
